# phase-golem

./: .gitignore  Cargo.toml  PRODUCT_VISION.md  PROJECT_ARCHITECTURE.md  README.md  TODO.md  justfile  libnull.rlib  orchestrate.example.toml  phase-golem.example.toml
.claude/: CLAUDE.md  SETTINGS-SPEC.md  settings.json  statusline.sh
.claude/commands/: explain.md
.dev/: BACKLOG.yaml  BACKLOG_INBOX.example.yaml  BACKLOG_INBOX.yaml
.github/workflows/: ci.yml
.task-golem/: archive.jsonl  tasks.jsonl
_ideas/: WRK-013_extract-shared-test-helpers.md  WRK-024_immutable-backlog-snapshots.md  WRK-026_inbox-file-for-running-orchestrator.md  WRK-027_persist-id-high-water-mark.md  WRK-028_structured-description-format.md  WRK-029_enforce-dependency-ordering.md  WRK-030_target-priority-list-and-only-flag.md  WRK-033_human-in-the-loop-commands.md  WRK-055_multiple-only-filters-and-logic.md  WRK-075_auto_retriage_stale_items.md  tg-ffd7b_migrate-scheduler-executor-to-pgerror.md
_worklog/: 2026-02.md
docs/: tg-cli-safety.md
examples/: BACKLOG.yaml
src/: agent.rs  backlog.rs  config.rs  coordinator.rs  executor.rs  filter.rs  git.rs  lib.rs  lock.rs  log.rs  main.rs  migration.rs  pg_error.rs  pg_item.rs  preflight.rs  prompt.rs  scheduler.rs  types.rs  worklog.rs
tests/: agent_integration_test.rs  agent_test.rs  backlog_test.rs  config_test.rs  coordinator_test.rs  executor_test.rs  filter_test.rs  git_test.rs  integration_test.rs  lock_test.rs  migration_test.rs  pg_error_test.rs  pg_item_test.rs  preflight_test.rs  prompt_test.rs  scheduler_test.rs  types_test.rs  worklog_test.rs
(+180 files in other folders)
