[package]
name = "phase-golem"
version = "0.1.0"
edition = "2021"
description = "A CLI that autonomously manages backlogs and executes multi-phase workflows via Claude AI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sirhamy/phase-golem"
keywords = ["cli", "orchestration", "workflow", "ai", "backlog"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "phase-golem"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fslock = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
task-golem = { path = "../task-golem" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"

[dev-dependencies]
fd-lock = "4"
serde_yaml_ng = "0.10"
tempfile = "3"
